--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Riley Shahar <riley.shahar@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+dill = "^0.3.4"
 
 [tool.poetry.dev-dependencies]
 coverage = {extras = ["toml"], version = "^5.5"}
