--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = "aga grades assignments"
 authors = ["Riley Shahar <riley.shahar@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6.1"
 dill = "^0.3.4"
+importlib-resources = "^5.2.2"
 
 [tool.poetry.dev-dependencies]
 coverage = {extras = ["toml"], version = "^5.5"}
