--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Riley Shahar <riley.shahar@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.6.1"
 dill = "^0.3.4"
+gradescope-utils = "^0.4.0"
 importlib-resources = "^5.2.2"
 
 [tool.poetry.dev-dependencies]
