--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ python-lsp-server = {extras = ["mccabe", "pydocstyle", "flake8"], version = "^1.
 pytest-lazy-fixture = "^0.6.3"
 pytest-mock = "^3.6.1"
 docker = "^5.0.2"
+codecov = "^2.1.12"
 
 [tool.poetry.scripts]
 aga = "aga.cli:app"
