--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ python-lsp-server = {extras = ["mccabe", "pydocstyle", "flake8"], version = "^1.
 sphinx = "^4.2.0"
 sphinx-autodoc-typehints = "^1.12.0"
 sphinx-rtd-theme = "^1.0.0"
+sphinx-click = "^3.0.1"
 
 [tool.poetry.scripts]
 aga = "aga.cli:app"
