--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,10 @@
 name: Tests
 on:
   - push
+    branches:
+      - main
   - pull_request
+
 jobs:
   tests:
     name: Python ${{ matrix.python-version }}
