Only run push tests for main

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,9 @@
 name: Tests
 on:
-  - push
-      branches:
-        - main
-  - pull_request
-      branches:
-        - main
-
+  push:
+    branches:
+      - main
+  pull_request:
 jobs:
   tests:
     name: Python ${{ matrix.python-version }}
