--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dill = "^0.3.4"
 gradescope-utils = "^0.4.0"
 importlib-resources = "^5.2.2"
 typer = "^0.4.0"
+importlib-metadata = "^4.8.1"
 
 [tool.poetry.dev-dependencies]
 codecov = "^2.1.12"
