--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,14 @@ documentation = "https://aga.readthedocs.io"
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
+dataclasses = {version = "^0.8.0", python = "~3.6"}
+dataclasses-json = "^0.5.6"
 dill = "^0.3.4"
 gradescope-utils = "^0.4.0"
+importlib-metadata = "^4.8.1"
 importlib-resources = "^5.2.2"
 typer = "^0.4.0"
-importlib-metadata = "^4.8.1"
+types-dataclasses = {version = "^0.1.7", python = "~3.6"}
 
 [tool.poetry.dev-dependencies]
 codecov = "^2.1.12"
