--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,14 @@ repository = "https://github.com/nihilistkitten/aga"
 documentation = "https://aga.readthedocs.io"
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+backports-datetime-fromisoformat = "^1.0.0"
 dataclasses = {version = "^0.8.0", python = "~3.6"}
 dataclasses-json = "^0.5.6"
 dill = "^0.3.4"
 gradescope-utils = "^0.4.0"
 importlib-metadata = "^4.8.1"
 importlib-resources = "^5.2.2"
+python = "^3.6.1"
 typer = "^0.4.0"
 types-dataclasses = {version = "^0.1.7", python = "~3.6"}
 
@@ -43,8 +44,9 @@ python-lsp-black = "^1.0.0"
 python-lsp-server = {extras = ["mccabe", "pydocstyle", "flake8"], version = "^1.2.2"}
 sphinx = "^4.2.0"
 sphinx-autodoc-typehints = "^1.12.0"
-sphinx-rtd-theme = "^1.0.0"
 sphinx-click = "^3.0.1"
+sphinx-rtd-theme = "^1.0.0"
+types-backports = "^0.1.3"
 
 [tool.poetry.scripts]
 aga = "aga.cli:app"
@@ -66,6 +68,7 @@ show_missing = true
 [tool.mypy]
 mypy_path = "src"
 strict = true
+warn_unused_ignores = false
 
 [tool.pylint.MASTER]
 disable = ["no-else-return"]
