--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Set up python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: "3.10"
 
       - name: Install poetry
         run: pip install poetry
@@ -22,6 +22,6 @@ jobs:
         run: pip install nox nox-poetry
 
       - name: Run nox
-        run: nox --sessions test-3.9 coverage
+        run: nox --sessions test-3.10 coverage
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
