--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,8 +3,10 @@ sphinx:
   configuration: docs/conf.py
 formats: all
 python:
-  version: "3.10"
   install:
     - requirements: docs/requirements.txt
     - method: pip
       path: .
+build:
+  tools:
+    python: "3.10"
