--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,9 @@ good-names = ["i", "j", "k", "s", "x", "y", "_"]
 [tool.pydocstyle]
 convention = "numpy"
 
+[tool.isort]
+profile = "black"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
