--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dill = "^0.3.4"
 gradescope-utils = "^0.4.0"
 python = "^3.10.0"
 typer = "^0.4.0"
+dacite = "^1.6.0"
+toml = "^0.10.2"
+types-toml = "^0.10.8"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
@@ -71,7 +74,7 @@ disable = ["no-else-return"]
 
 [tool.pylint.format]
 max-line-length = 88
-good-names = ["i", "j", "k", "s", "x", "y", "_"]
+good-names = ["i", "j", "k", "s", "x", "y", "_", "ui"]
 
 [tool.pydocstyle]
 convention = "numpy"
