--- a/tests/resources/aga.toml
+++ b/tests/resources/aga.toml
@@ -1,4 +1,4 @@
 # An example config file
 
-[ui]
-test_name_fmt = "Check with args {args} and kwargs {kwargs}."
+[test]
+name_fmt = "Check with args {args} and kwargs {kwargs}."
