Single source of truth config defaults

--- a/examples/aga.toml
+++ b/examples/aga.toml
@@ -1,33 +1,1 @@
-# This file contains all the default configuration options.
-
-[test]
-# Configuration related to student-facing UI, i.e. the messages displayed to them in the
-# frontend.
-
-# The separator for test case name generation.
-name_sep = ","
-
-# The format string for generating test case names.
-#
-# Supported format specifiers:
-#  - `args`: a separated list of the test case arguments, i.e. `0,3`
-#  - `kwargs`: a separated list of the test case keyword arguments, i.e. `x=0,y=3`
-#  - `sep`: a copy of the separator if there are both arguments and keyword arguments,
-#           empty otherwise 
-name_fmt = "Test on {args}{sep}{kwargs}."
-
-# The format string for generating failure messages.
-#
-# Supported format specifiers:
-#  - `input`: a formatted repr of the test case inputs.
-#  - `output`: the repr of the student submission's output.
-#  - `expected`: the repr of the golden solution's output.
-failure_msg = "Your submission didn't give the output we expected. We checked it with {input} and got {output}, but we expected {expected}."
-
-# The format string for generating failure messages.
-#
-# Supported format specifiers:
-#  - `type`: the kind of python error, e.g. NameError.
-#  - `output`: message: the error message.
-#  - `expected`: traceback: the error traceback.
-error_msg = "A python {type} occured while running your submission: {message}.\n\nHere's what was running when it happened:{traceback}."
+../src/aga/defaults.toml
