--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dataclasses-json = "^0.5.6"
 dill = "^0.3.4"
 gradescope-utils = "^0.4.0"
 python = "^3.10.0"
-typer = "^0.4.0"
+typer = {extras = ["all"], version = "^0.6.1"}
 dacite = "^1.6.0"
 toml = "^0.10.2"
 types-toml = "^0.10.8"
