Add prize function

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,10 @@ omit = ["src/aga/gradescope/resources/setup.py"]
 
 [tool.coverage.report]
 show_missing = true
+exclude_lines = [
+  "pragma: no cover",
+  "if TYPE_CHECKING:"
+]
 
 [tool.mypy]
 mypy_path = "src"
