--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ source = ["src", "*/site-packages"]
 [tool.coverage.run]
 branch = true
 source = ["aga"]
-omit = ["src/aga/gradescope/resources/setup.py"]
+omit = ["src/aga/gradescope/resources/setup.py", "src/aga/prize.py"]
 
 [tool.coverage.report]
 show_missing = true
