--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,41 +12,41 @@ documentation = "https://aga.readthedocs.io"
 [tool.poetry.dependencies]
 dataclasses-json = "^0.5.6"
 dill = "^0.3.4"
-gradescope-utils = "^0.4.0"
+gradescope-utils = "^0.5.0"
 python = "^3.10.0"
-typer = {extras = ["all"], version = "^0.6.1"}
+typer = {extras = ["all"], version = "^0.7.0"}
 dacite = "^1.6.0"
 toml = "^0.10.2"
 types-toml = "^0.10.8"
 
-[tool.poetry.dev-dependencies]
-black = "^22.3.0"
-coverage = {extras = ["toml"], version = "^5.5"}
-flake8 = "^4.0.1"
-flake8-black = "^0.2.3"
-flake8-bugbear = "^21.9.1"
-mypy = "^0.971"
-mypy-ls = "^0.5.1"
-myst-parser = "^0.15.2"
-nox = "^2021.6.12"
-nox-poetry = "^0.8.6"
-pydocstyle = "^6.1.1"
-pylint = "^2.13.9"
-pyls-flake8 = "^0.4.0"
-pyls-isort = "^0.2.2"
-pytest = "^6.2.5"
-pytest-cov = "^2.12.1"
-pytest-lazy-fixture = "^0.6.3"
-pytest-mock = "^3.6.1"
-python-lsp-black = "^1.0.0"
-python-lsp-server = {extras = ["mccabe", "pydocstyle", "flake8"], version = "^1.4.1"}
-sphinx = "^4.2.0"
-sphinx-autodoc-typehints = "^1.12.0"
-sphinx-click = "^3.0.1"
-sphinx-rtd-theme = "^1.0.0"
-
 [tool.poetry.scripts]
 aga = "aga.cli:aga_app"
+
+[tool.poetry.group.dev.dependencies]
+nox-poetry = "^1.0.2"
+nox = "^2022.11.21"
+mypy = "^1.2.0"
+black = "^23.3.0"
+coverage = "^7.2.3"
+flake8 = "^6.0.0"
+flake8-black = "^0.3.6"
+flake8-bugbear = "^23.3.23"
+mypy-ls = "^0.5.1"
+myst-parser = "^1.0.0"
+pydocstyle = "^6.3.0"
+pyls-flake8 = "^0.4.0"
+pyls-isort = "^0.2.2"
+pytest = "^7.3.1"
+pytest-cov = "^4.0.0"
+pytest-lazy-fixture = "^0.6.3"
+pytest-mock = "^3.10.0"
+sphinx = "^6.1.3"
+sphinx-autodoc-typehints = "^1.23.0"
+sphinx-click = "^4.4.0"
+sphinx-rtd-theme = "^1.2.0"
+python-lsp-black = "^1.0.0"
+python-lsp-server = {extras = ["mccabe", "pydocstyle", "flake8"], version = "^1.4.1"}
+
 
 [tool.pytest.ini_options]
 filterwarnings = ["ignore:'autocompletion' is renamed to 'shell_complete':DeprecationWarning"]
